--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ h2 {
   font-family: 'PT Mono', monospace;
   font-size: 2.5rem;
   font-weight: normal;
+  line-height: 2;
   color: #66BFBF;
   padding: 20px;
 }
@@ -56,6 +57,9 @@ a:link {
 
 .intro {
   padding-top: 20px;
+  text-align: center;
+  width: 30%;
+  margin: auto;
 }
 
 .top-container {
@@ -68,6 +72,7 @@ a:link {
 background-color: #C9D8B6;
 padding-top: 100px;
 padding-bottom: 100px;
+width: auto;
 }
 
 .bottom-container {
@@ -107,6 +112,8 @@ padding: 5px;
   position: relative;
   padding: 35px;
   border-radius: 5%;
+  height: 350px;
+  width: 480;
 }
 
 .profile {
@@ -115,20 +122,24 @@ padding: 5px;
 
 .skill-row {
   width: 50%;
-  margin: 0 auto 0 auto;
+  margin: 50px auto 50px auto;
   padding-top: 20px;
   padding-bottom: 20px;
   text-align: left;
 }
 
 .monitor {
-  width: 25%;
+  min-width: 25%;
+  max-width: 25%;
+  height: auto;
   float: left;
   margin-right: 30px;
 }
 
 .pettingdogs {
-  width: 25%;
+  min-width: 25%;
+  max-width: 25%;
+  height: auto;
   float: left;
   margin-right: 30px;
 }
@@ -165,12 +176,17 @@ padding: 5px;
   padding-bottom: 50px;
 }
 
+.img-used {
+  font-size: 0.9em;
+}
+
 .list {
-  display: table;
-  margin: 0 auto;
+  text-align: center;
+  list-style: inside;
+  font-size: 0.9em;
 }
 
 .copyright {
-  color: color: #97C4B8;
+  color: #97C4B8;
   font-size: 0.8em;
 }
